--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,13 +11,12 @@
             "mode": "auto",
             "program": "${workspaceFolder}",
             "args": [
-                "-input", "queries_latlong.txt",
+                "-input", "input.json",
                 "-results", "results/place-latlong.csv", 
                 "-exit-on-inactivity", "3m", 
                 "-lang", "vi", 
                 "-c", "6", 
-               //"-isNotQueryEscape",
-                "-debug",
+                //"-debug",
                 "-proxyfile","proxies.txt"
             ]
         }
