feat: add test workflow chain
Signed-off-by: Lens <yoanyombapro@gmail.com>

--- a/.github/workflows/artifact-release.yml
+++ b/.github/workflows/artifact-release.yml
@@ -85,7 +85,11 @@ jobs:
 
       - name: Go Build
         run: go build -o /dev/null ./...
+      - name: Test
+        run: make test
+
   build-leads-scraper:
+    needs: run
     name: Build leads scraper images for ${{ inputs.environment }}
     uses: ./.github/workflows/reusable-deploy-docker-artifacts.yml
     with:
