--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,3 +48,6 @@ jobs:
 
       - name: Go Build
         run: go build -o /dev/null ./...
+
+      - name: Test
+        run: go test -v -race -timeout 5m ./...
