feat: update release workflow and add reddis runner to web runner
Signed-off-by: Lens <yoanyombapro@gmail.com>

--- a/.github/workflows/artifact-release.yml
+++ b/.github/workflows/artifact-release.yml
@@ -39,6 +39,9 @@ on:
       AWS_REGION:
         required: false
         description: "AWS Region override"
+      REDIS_URL:
+        required: false
+        description: "Redis connection string override"
 
 permissions:
   contents: write
@@ -120,3 +123,4 @@ jobs:
       AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
       AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
       AWS_REGION: ${{ secrets.AWS_REGION }}
+      REDIS_URL: ${{ secrets.REDIS_URL }}
