--- a/charts/leads-scraper-service/values.yaml
+++ b/charts/leads-scraper-service/values.yaml
@@ -144,6 +144,13 @@ tests:
 
 # Application specific configuration
 config:
+  # -- Enable Redis task handler
+  redis:
+    enabled: true
+    # -- Redis connection string
+    dsn: ""
+    # -- Redis workers
+    workers: 10
   # Database Configuration (Required)
   database:
     # -- Database connection string (Required)
