chore: address local deployment
Signed-off-by: Lens <yoanyombapro@gmail.com>

--- a/charts/leads-scraper-service/Chart.yaml
+++ b/charts/leads-scraper-service/Chart.yaml
@@ -52,3 +52,7 @@ dependencies:
     version: "12.5.6"
     repository: https://charts.bitnami.com/bitnami
     condition: postgresql.enabled
+  - name: redis
+    version: "17.11.3"
+    repository: https://charts.bitnami.com/bitnami
+    condition: redis.enabled
