staging docker deployment

--- a/Dockerfile.original
+++ b/Dockerfile.original
@@ -1,6 +1,7 @@
-# Build stage for Playwright dependencies (keep this for scraping functionality)
-FROM golang:1.23-bullseye AS playwright-deps
+# Build stage for Playwright dependencies
+FROM golang:1.24.0-bullseye AS playwright-deps
 ENV PLAYWRIGHT_BROWSERS_PATH=/opt/browsers
+#ENV PLAYWRIGHT_DRIVER_PATH=/opt/
 RUN apt-get update && apt-get install -y --no-install-recommends \
     ca-certificates \
     curl \
@@ -13,24 +14,21 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && playwright install chromium --with-deps
 
 # Build stage
-FROM golang:1.23-bullseye AS builder
+FROM golang:1.24.0-bullseye AS builder
 WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
+RUN CGO_ENABLED=0 go build -ldflags="-w -s" -o /usr/bin/google-maps-scraper
 
-# Build the binary with proper name for Brezel.ai
-RUN CGO_ENABLED=0 go build -ldflags="-w -s" -o /usr/bin/brezel-api .
-
-# Final stage - optimized for API + scraping
+# Final stage
 FROM debian:bullseye-slim
 ENV PLAYWRIGHT_BROWSERS_PATH=/opt/browsers
 ENV PLAYWRIGHT_DRIVER_PATH=/opt
 
-# Install runtime dependencies
+# Install only the necessary dependencies in a single layer
 RUN apt-get update && apt-get install -y --no-install-recommends \
     ca-certificates \
-    curl \
     libnss3 \
     libnspr4 \
     libatk1.0-0 \
@@ -53,26 +51,12 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy Playwright browsers and cache
 COPY --from=playwright-deps /opt/browsers /opt/browsers
 COPY --from=playwright-deps /root/.cache/ms-playwright-go /opt/ms-playwright-go
 
-# Set proper permissions
 RUN chmod -R 755 /opt/browsers \
     && chmod -R 755 /opt/ms-playwright-go
 
-# Copy the application binary
-COPY --from=builder /usr/bin/brezel-api /usr/bin/
+COPY --from=builder /usr/bin/google-maps-scraper /usr/bin/
 
-# Copy migrations directory
-COPY scripts/migrations /scripts/migrations
-
-# Expose the web server port
-EXPOSE 8080
-
-# Health check for container orchestration
-HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-  CMD curl -f http://localhost:8080/health || exit 1
-
-# Default to web mode for API server
-ENTRYPOINT ["brezel-api", "-web"]
+ENTRYPOINT ["google-maps-scraper"]
