--- a/docker-compose.staging.yaml
+++ b/docker-compose.staging.yaml
@@ -3,10 +3,11 @@ services:
   brezel-api:
     image: brezel-staging-test
     environment:
-      - DSN=${DSN:-postgres://scraper:strongpassword@host.docker.internal:5432/google_maps_scraper?sslmode=disable}
+      - DSN=${DSN:-postgres://scraper:strongpassword@172.17.0.1:5432/google_maps_scraper?sslmode=disable}
       - DATA_FOLDER=/gmapsdata
       - WEB_ADDR=:8080
       - LOG_LEVEL=info
+    command: ["-web", "-c", "2"]
     ports:
       - "8080:8080"
     volumes:
