fix deployment issues with concurrency on single core

--- a/.env.staging.example
+++ b/.env.staging.example
@@ -2,19 +2,23 @@
 # Copy this file to .env.staging and customize for your setup
 
 # Database Configuration
-# For external PostgreSQL server (Linux server IP or hostname)
-DSN=postgres://username:password@your-postgres-host:5432/database_name?sslmode=disable
+# For Linux Docker (connects to host PostgreSQL) - DEFAULT
+DSN=postgres://scraper:your_secure_password@172.17.0.1:5432/google_maps_scraper?sslmode=disable
+
+# For external PostgreSQL server
+# DSN=postgres://scraper:your_password@your-postgres-host:5432/google_maps_scraper?sslmode=disable
 
 # For Docker Desktop on macOS/Windows (connects to host PostgreSQL)
-# DSN=postgres://username:password@host.docker.internal:5432/database_name?sslmode=disable
-
-# For Linux Docker (connects to host PostgreSQL)
-# DSN=postgres://username:password@172.17.0.1:5432/database_name?sslmode=disable
+# DSN=postgres://scraper:your_password@host.docker.internal:5432/google_maps_scraper?sslmode=disable
 
 # Application Configuration
 WEB_ADDR=:8080
 DATA_FOLDER=/gmapsdata
 LOG_LEVEL=info
+
+# Performance Configuration (CPU Auto-Detection)
+# CONCURRENCY=1    # Uncomment to override auto-detection (useful for single-core servers)
+# Leave commented for auto-detection: 1 for single-core, NumCPU/2 for multi-core
 
 # Optional: Authentication (if using Clerk)
 CLERK_API_KEY=
