cleanup env config

--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,51 @@
-# Database connection - Used for connection string building
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=scraper
-DB_PASSWORD=strongpassword
-DB_NAME=google_maps_scraper
-DB_SSL_MODE=disable
+# ===============================================================
+# brezel.ai -  Environment Configuration
+# ===============================================================
+# Copy this file to .env and customize for your specific environment.
+# For example, create a .env file for local development.
+# ---------------------------------------------------------------
 
-# Full DSN - This will be used if provided
-DATABASE_URL=postgres://scraper:strongpassword@localhost:5432/google_maps_scraper?sslmode=disable
+# === Core Infrastructure ===
+# These variables are typically used by Docker Compose directly.
 
-# Server configuration
-SERVER_PORT=8080
-DATA_FOLDER=./webdata
+# PostgreSQL Credentials (for local development with docker-compose.dev.yaml)
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
 
-# Authentication
-CLERK_API_KEY=your_clerk_api_key_here
+# Nginx Port Mapping (for production with docker-compose.production.yaml)
+API_PORT=8080
+NGINX_PORT=80
+NGINX_SSL_PORT=443
 
-# Optional: AWS Lambda configuration
-AWS_REGION=us-east-1
-AWS_LAMBDA_FUNCTION_NAME=your_lambda_function_name
-AWS_ACCESS_KEY_ID=your_access_key_id
-AWS_SECRET_ACCESS_KEY=your_secret_access_key
+# === Application Configuration ===
+# These variables are passed to the Go application container.
 
-# Optional: S3 configuration
-S3_BUCKET_NAME=your_bucket_name
+# Database Source Name (DSN)
+# --- Choose ONE of the following and comment out the others ---
+# For local development (macOS/Windows with Docker Desktop)
+DSN=postgres://scraper:strongpassword@host.docker.internal:5432/google_maps_scraper?sslmode=disable
+# For staging/production (Linux Docker)
+# DSN=postgres://scraper:your_secure_password@172.17.0.1:5432/google_maps_scraper?sslmode=disable
+# For an external PostgreSQL server
+# DSN=postgres://user:password@your-external-host:5432/your-db?sslmode=disable
+
+# Application Settings
+WEB_ADDR=:8080
+DATA_FOLDER=/gmapsdata
+LOG_LEVEL=info
+
+# Performance Tuning
+# Leave commented for auto-detection (recommended).
+# Uncomment to set a specific number of concurrent scrapers (e.g., for single-core servers).
+# CONCURRENCY=1
+
+# === Services & Integrations ===
+
+# Clerk Authentication (Optional)
+# Provide your Clerk API key to enable user authentication and usage tracking.
+# If left blank, authentication will be disabled.
+CLERK_API_KEY=
+
+# Telemetry (Optional)
+# Set to 1 to disable anonymous telemetry.
+DISABLE_TELEMETRY=0
