--- a/.github/workflows/staging-deploy.yml
+++ b/.github/workflows/staging-deploy.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.21'
+          go-version: '1.24'
           cache: true
 
       - name: Download dependencies
@@ -52,6 +52,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Fix Go version in Dockerfile
+        run: |
+          # No changes needed - Dockerfile already uses Go 1.24
+          echo "Dockerfile Go version:"
+          grep "FROM golang" Dockerfile
+          echo "go.mod version:"
+          grep "^go " go.mod
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -97,116 +105,187 @@ jobs:
     if: github.ref == 'refs/heads/develop'
     environment:
       name: staging
-      url: https://staging.brezel.ai
+      url: http://64.226.112.104:8080
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Deploy to staging server
         uses: appleboy/ssh-action@v1.0.3
-        env:
-          REGISTRY: ${{ env.REGISTRY }}
-          IMAGE_NAME: ${{ env.IMAGE_NAME }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_ACTOR: ${{ github.actor }}
-          POSTGRES_PASSWORD: ${{ secrets.STAGING_POSTGRES_PASSWORD }}
-          CLERK_API_KEY: ${{ secrets.STAGING_CLERK_API_KEY }}
-          DOCKER_COMPOSE_FILE: ${{ env.DOCKER_COMPOSE_FILE }}
-          CONTAINER_NAME: ${{ env.CONTAINER_NAME }}
         with:
           host: ${{ secrets.STAGING_HOST }}
           username: ${{ secrets.STAGING_USER }}
           key: ${{ secrets.STAGING_SSH_KEY }}
-          envs: REGISTRY,IMAGE_NAME,GITHUB_TOKEN,GITHUB_ACTOR,POSTGRES_PASSWORD,CLERK_API_KEY,DOCKER_COMPOSE_FILE,CONTAINER_NAME
-          script_stop: true
           script: |
             set -e
-
-            # Colors
-            RED='\033[0;31m'
-            GREEN='\033[0;32m'
-            YELLOW='\033[1;33m'
-            BLUE='\033[0;34m'
-            NC='\033[0m'
-
-            print_status() { echo -e "${GREEN}[INFO]${NC} $1"; }
-            print_warning() { echo -e "${YELLOW}[WARNING]${NC} $1"; }
-            print_header() { echo -e "${BLUE}[DEPLOY]${NC} $1"; }
-
-            print_header "🚀 Starting deployment to staging"
-
-            cd /home/${{ secrets.STAGING_USER }}/google-maps-scraper || exit 1
-
-            CPU_CORES=$(nproc 2>/dev/null || echo "1")
-            OPTIMAL_CONCURRENCY=$((CPU_CORES / 2))
-            [ $OPTIMAL_CONCURRENCY -lt 1 ] && OPTIMAL_CONCURRENCY=1
-
-            print_status "🔍 CPU Cores: $CPU_CORES | Optimal Concurrency: $OPTIMAL_CONCURRENCY"
-
-            print_status "📥 Pulling latest backend code..."
+            
+            echo "Starting deployment to staging server"
+            echo "Time: $(date)"
+            echo "User: $(whoami)"
+            
+            # Navigate to backend directory
+            cd /home/${{ secrets.STAGING_USER }}/google-maps-scraper || {
+              echo "ERROR: Backend directory not found"
+              exit 1
+            }
+            
+            # Pull latest code
+            echo "Pulling latest backend code from develop branch..."
             git fetch origin
             git checkout develop
             git pull origin develop
-
-            print_status "📥 Pulling latest frontend..."
+            
+            # Check for frontend (optional)
+            echo "Checking for frontend application..."
             FRONTEND_DIR="../scraper-webapp"
-            [ ! -d "$FRONTEND_DIR" ] && FRONTEND_DIR="../google-maps-scraper-webapp"
+            if [ ! -d "$FRONTEND_DIR" ]; then
+              FRONTEND_DIR="../google-maps-scraper-webapp"
+            fi
+            
             if [ -d "$FRONTEND_DIR" ]; then
+              echo "Found frontend at: $FRONTEND_DIR"
               cd "$FRONTEND_DIR"
               git fetch origin
               git checkout develop || git checkout main
               git pull
-              cd -
+              cd /home/${{ secrets.STAGING_USER }}/google-maps-scraper
             else
-              print_warning "Frontend directory not found"
+              echo "Frontend directory not found, proceeding with backend only"
             fi
-
-            print_status "📝 Setting up .env..."
-            [ ! -f ".env" ] && cp .env.example .env
+            
+            # Setup environment
+            echo "Configuring environment variables..."
+            if [ ! -f ".env" ]; then
+              echo "No .env file found, creating from template..."
+              cp .env.example .env
+            fi
+            
+            # Backup current configuration
             cp .env .env.backup
+            
+            # Fix Docker networking for Linux
             sed -i 's/host\.docker\.internal/172.17.0.1/g' .env
-            [ ! -z "$POSTGRES_PASSWORD" ] && sed -i "s/^POSTGRES_PASSWORD=.*/POSTGRES_PASSWORD=$POSTGRES_PASSWORD/" .env && sed -i "s/scraper:.*@/scraper:$POSTGRES_PASSWORD@/" .env
-            [ ! -z "$CLERK_API_KEY" ] && sed -i "s/^CLERK_API_KEY=.*/CLERK_API_KEY=$CLERK_API_KEY/" .env
-
-            if [ $CPU_CORES -eq 1 ]; then
-              sed -i "/^CONCURRENCY=/c\CONCURRENCY=1" .env || echo "CONCURRENCY=1" >> .env
-            else
-              sed -i 's/^CONCURRENCY=/#CONCURRENCY=/' .env
+            
+            # Update passwords from GitHub secrets
+            if [ ! -z "${{ secrets.STAGING_POSTGRES_PASSWORD }}" ]; then
+              echo "Updating database password..."
+              sed -i "s/^POSTGRES_PASSWORD=.*/POSTGRES_PASSWORD=${{ secrets.STAGING_POSTGRES_PASSWORD }}/" .env
+              sed -i "s/scraper:strongpassword/scraper:${{ secrets.STAGING_POSTGRES_PASSWORD }}/" .env
             fi
-
-            print_status "🔐 Docker login to GHCR"
-            echo $GITHUB_TOKEN | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
-
-            print_status "🏗️ Building backend Docker image"
-            docker build --no-cache -t brezel-staging-test .
-
+            
+            if [ ! -z "${{ secrets.STAGING_CLERK_API_KEY }}" ]; then
+              echo "Updating Clerk API key..."
+              sed -i "s/^CLERK_API_KEY=.*/CLERK_API_KEY=${{ secrets.STAGING_CLERK_API_KEY }}/" .env
+            fi
+            
+            # Set concurrency for single-core servers
+            CPU_CORES=$(nproc)
+            echo "Server has $CPU_CORES CPU cores"
+            if [ $CPU_CORES -eq 1 ]; then
+              echo "Configuring for single-core performance..."
+              if grep -q "^CONCURRENCY=" .env; then
+                sed -i "s/^CONCURRENCY=.*/CONCURRENCY=1/" .env
+              else
+                echo "CONCURRENCY=1" >> .env
+              fi
+            fi
+            
+            # Build Docker image
+            echo "Building backend Docker image..."
+            docker build --no-cache -t brezel-staging-test . || {
+              echo "ERROR: Docker build failed"
+              echo "First 20 lines of Dockerfile:"
+              head -20 Dockerfile
+              exit 1
+            }
+            
+            # Build frontend if exists
             if [ -d "$FRONTEND_DIR" ]; then
-              print_status "🏗️ Building frontend Docker image"
-              [ ! -f "$FRONTEND_DIR/.env.staging" ] && cp "$FRONTEND_DIR/.env.example" "$FRONTEND_DIR/.env.staging" && echo "NEXT_PUBLIC_API_URL=http://localhost:8080" >> "$FRONTEND_DIR/.env.staging"
+              echo "Building frontend Docker image..."
+              if [ ! -f "$FRONTEND_DIR/.env.staging" ]; then
+                if [ -f "$FRONTEND_DIR/.env.example" ]; then
+                  cp "$FRONTEND_DIR/.env.example" "$FRONTEND_DIR/.env.staging"
+                fi
+                echo "NEXT_PUBLIC_API_URL=http://localhost:8080" >> "$FRONTEND_DIR/.env.staging"
+              fi
               docker build --no-cache -t gmaps-webapp-staging "$FRONTEND_DIR"
             fi
-
-            print_status "🛑 Stopping containers"
-            docker compose -f $DOCKER_COMPOSE_FILE down --remove-orphans || true
-
-            print_status "🚀 Starting with docker-compose"
-            docker compose -f $DOCKER_COMPOSE_FILE --env-file .env up -d
-
-            print_status "⏳ Waiting for services..."
-            sleep 10
-
-            print_status "🔍 Health check"
-            BACKEND_HEALTH_URL="http://localhost:8080/health"
-            for i in {1..10}; do
-              if curl --silent --fail "$BACKEND_HEALTH_URL"; then
-                print_status "✅ Backend is healthy"
+            
+            # Stop existing containers
+            echo "Stopping current containers..."
+            docker compose -f docker-compose.staging.yaml down --remove-orphans || true
+            
+            # Start containers
+            echo "Starting services with docker-compose..."
+            docker compose -f docker-compose.staging.yaml --env-file .env up -d
+            
+            # Wait for startup
+            echo "Waiting for services to initialize..."
+            sleep 15
+            
+            # Health check
+            echo "Checking backend health status..."
+            HEALTH_CHECK_URL="http://localhost:8080/health"
+            MAX_ATTEMPTS=30
+            
+            for i in $(seq 1 $MAX_ATTEMPTS); do
+              if curl -s -f $HEALTH_CHECK_URL > /dev/null 2>&1; then
+                echo "Backend is running and healthy"
+                echo ""
+                echo "Deployment completed successfully"
+                echo "Backend API: http://64.226.112.104:8080"
+                echo "Health endpoint: http://64.226.112.104:8080/health"
+                echo "API documentation: http://64.226.112.104:8080/api/docs"
+                if [ -d "$FRONTEND_DIR" ]; then
+                  echo "Frontend application: http://64.226.112.104:3000"
+                fi
+                echo ""
+                echo "Running containers:"
+                docker ps | grep -E "(brezel|gmaps)" || true
                 exit 0
               else
-                print_warning "Attempt $i/10 failed"
-                sleep 5
+                echo "Health check attempt $i of $MAX_ATTEMPTS - Backend not ready yet"
+                if [ $i -eq $MAX_ATTEMPTS ]; then
+                  echo "ERROR: Backend failed to start after $MAX_ATTEMPTS attempts"
+                  echo ""
+                  echo "Container logs:"
+                  docker compose -f docker-compose.staging.yaml logs --tail 100
+                  exit 1
+                fi
+                sleep 3
               fi
             done
 
-            echo -e "${RED}[ERROR] Backend did not start properly${NC}"
-            docker compose -f $DOCKER_COMPOSE_FILE logs
+      - name: Run smoke tests
+        if: success()
+        run: |
+          sleep 5
+          echo "Running basic API tests..."
+          
+          # Test health endpoint
+          echo "Testing health endpoint..."
+          curl -f -s http://64.226.112.104:8080/health || {
+            echo "Health check failed"
             exit 1
+          }
+          
+          echo "All tests passed successfully"
+
+      - name: Notify deployment status
+        if: always()
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const status = '${{ job.status }}';
+            const message = status === 'success' 
+              ? 'Successfully deployed to staging environment' 
+              : 'Deployment to staging failed';
+            
+            github.rest.repos.createCommitStatus({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              sha: context.sha,
+              state: status === 'success' ? 'success' : 'failure',
+              description: message,
+              context: 'Staging Deployment'
+            });
