feat: add multi-image extraction support and enhanced metadata handling
- Introduce support for extracting multiple images per category (e.g., business, menu, user, street).
- Add enhanced image metadata (dimensions, alt text, attribution) and organize images by categories.
- Update models, runners, and web UI to toggle and handle image extraction.
- Enhance compatibility with legacy format while optimizing performance.
- Add Stripe configuration placeholders in `.env.example`.

--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,13 @@ LOG_LEVEL=info
 # If left blank, authentication will be disabled.
 CLERK_API_KEY=
 
+# Stripe Payment Processing (Required for Subscriptions)
+# Get these from your Stripe Dashboard at https://dashboard.stripe.com/apikeys
+# For development, use test keys that start with 'sk_test_' and 'whsec_'
+# For production, use live keys that start with 'sk_live_' and 'whsec_'
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
+
 # Telemetry (Optional)
 # Set to 1 to disable anonymous telemetry.
 DISABLE_TELEMETRY=0
