feat: implement real-time streaming plugin with duplicate prevention
Add comprehensive streaming system with Server-Sent Events (SSE) for real-time
scraping progress monitoring and intelligent duplicate prevention using Google Maps
Customer IDs (CIDs).

**Streaming Plugin System**
- Implement StreamingDuplicateFilterWriter plugin with factory pattern architecture
- Add CID-based duplicate detection to prevent re-scraping existing businesses
- Emit structured events (BATCH_START, COMPANY_SCRAPED, BATCH_END) for monitoring
- Support review limiting with intelligent filtering and sorting

**Server-Sent Events (SSE) Integration**
- Add `/api/v1/jobs/{id}/stream` endpoint for real-time event streaming
- Implement event broadcasting system with client lifecycle management
- Add event translation layer to fix job ID mismatches between plugin and web contexts
- Resolve WriteTimeout issues for long-running streaming connections with heartbeats

**API Extensions**
- Extend JobData struct with ExistingCIDs and ReviewLimit fields
- Maintain backward compatibility with existing job creation endpoints
- Add proper validation for new streaming parameters

**Factory Pattern Architecture**
- Replace singleton plugin pattern with factory-based instance creation
- Eliminate "send on closed channel" crashes through isolated plugin instances
- Enable concurrent job processing with proper resource cleanup
- Implement thread-safe channel management with atomic operations

**Pre-filtering Optimization**
- Initialize deduper with existing CIDs for upfront duplicate prevention
- Reduce processing overhead by skipping known businesses before scraping
- Add comprehensive logging for duplicate detection statistics

**Python Client Integration**
- Extend Pydantic v2 client with SSE streaming support and type-safe event models
- Add synchronous and asynchronous streaming methods with progress tracking
- Implement automatic connection management and proper resource cleanup

- 25+ comprehensive bus

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,23 @@ cache/
 vendor
 bin
 webdata/
+# Personal development files
+docs/
+python-client/
+CLAUDE.md
+deploy/
+docker-compose.yml
+docker-compose.prod.yml
+nginx.conf
+setup.sh
+.env.example
+gmapsdata/
+google-maps-scraper
+.claude/
+.cursor/
+.vscode/
+
+# Compiled plugins (built from source, not tracked)
+*.so
+plugins/*.so
+
