feat: Add Webshare API integration for dynamic proxy management

--- a/.env.example
+++ b/.env.example
@@ -53,6 +53,12 @@ CLERK_API_KEY=
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
 
+# Webshare Proxy API (Optional)
+# Provide your Webshare API key to automatically fetch and rotate proxies.
+# Get your API key from: https://proxy.webshare.io/userapi/
+# If provided, proxies will be fetched dynamically instead of using manual -proxies flag.
+WEBSHARE_API_KEY=
+
 # Telemetry (Optional)
 # Set to 1 to disable anonymous telemetry.
 DISABLE_TELEMETRY=0
