security: harden file access, resolve gosec G301/G304 Use 0750 for data folder (webrunner) Validate output path; write via OpenFile(0640) with safe prefix check Add Service.GetCSVReader using DirFS + Rel checks (scoped root) Switch downloads to GetCSVReader in web and handlers Extend JobService interface; keep GetCSV for compatibility

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,11 @@ google-maps-scraper
 # Output of the go coverage tool
 *.out
 
+# Security reports
+gosec-report.json
+gosec-report.html
+gosec-report.sarif
+
 # IDE specific files
 .idea/
 .vscode/
